# mkio

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/order_book/: mkio.toml  run.py  server.toml  test0-new.csv  test1-accept.csv  test2-reject.json  test3-fill.csv  test4-cancel.csv  test_txn.csv  test_txn.json
examples/order_book/static/: index.html
examples/order_service/: config.toml  mkio.toml  run.py
examples/order_service/static/: index.html
skills/mkio/: SKILL.md
src/mkio/: __init__.py  __main__.py  _expr.py  _json.py  _ref.py  _version.py  change_bus.py  config.py  database.py  migration.py  server.py  writer.py  ws_protocol.py
src/mkio/agents/: AGENTS.js.md  AGENTS.md  AGENTS.python.md
src/mkio/client/: __init__.py  mkio.js
src/mkio/services/: base.py  info.py  query.py  reqrep.py  stream.py  subpub.py  transaction.py
src/mkio/skill_helpers/: __main__.py  discover.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_js.py  test_config.py  test_config_route.py  test_discover.py  test_expr.py  test_info_service.py  test_integration.py  test_migration.py  test_monitor.py  test_ref.py  test_reqrep.py  test_service_detail.py  test_services.py  test_version.py  test_writer.py
