[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkio"
version = "0.1.0"
description = "Config-driven microservice framework with WebSocket, SQLite, and expression language"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
fast = [
    "orjson>=3.9",
    "uvloop>=0.19; sys_platform != 'win32'",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
]

[project.scripts]
mkio = "mkio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mkio"]

[tool.hatch.build.targets.wheel.shared-data]
"src/mkio/client/mkio.js" = "mkio/client/mkio.js"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
